@@ -9,18 +9,10 @@
 
 * Add an sml-mlb-mode for ML Basis files (see http://mlton.org/Emacs)
 
-* improve M-C-f and M-C-b (they too often don't do the right thing) and
-  add M-C-k and other such sexp-chunked operations.
-
-* if indentation is non-obvious, return a list of possible indentations
-  and choose the first unless the current is one of the possible choices.
-
 * make `M-x sml-compile' more generic.
 
 * allow specifying indentation of dependent keywords (how to indent `in'
   relative to `let', for example).
-
-* use symbols instead of strings for `sym'.
 
 * recognize irrefutable patterns (with "Capital"-heuristics, for example:
   a regexp like "\\([(),]\\|[_a-z][_a-z0-9]*\\)+").
